--- a/index.html
+++ b/index.html
@@ -96,20 +96,37 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="col-md-12">
 									<div class="about-desc">
 										<span class="heading-meta">Intro</span>
-										<p>I was born and raised in the beautiful city of Addis Ababa, also known as the capital of Africa. I am a software Engineer by training and i have attended different postgraduate programs including: Computer Science, Linguistics and Business Management. 
+										<p>I was born and raised in Addis Ababa, a city known not only for Lucy, Bikila Abebe, and the fact that it is one of the highest capitals in the world, but also known for being the capital of Africa. I am a software Engineer by training and I have attended various postgraduate programs concerning Computer Science, Linguistics and Business Management. 
 										</p>
 
-									<p>I started my formal career  as a software developer at tech startup company, my classmates and i founded back in 2012 while we were in 5th year of our engineering study. In a few month, we were contracted by regions largest office to develop a system that can close the market information gaps between farmers, traders and the regional officers.</p>
+									<p>I started my formal career as a software developer at a startup company, some of my
+									classmates and I founded back in 2012 while we were in 5th year of our engineering study.
+									Within a few month, we received a contract by the region’s largest office in order to develop
+									a system that can bridge the information gaps between farmers, traders and the regional
+									officers</p>
 
-									<p>We were given a chance to empower small scale producers through accurate, timely and accessible price information by increasing their bargaining power while they took their product to the market.This was the year i understood the power of my field and what it took to solve a social problem with the use of technology.</p>
+									<p>We were given a chance to empower small scale producers through accurate, timely and
+									accessible price information by increasing their bargaining power while they took their
+									product to the market.It was at that moment that I started to understand the potential of my field and what it takes to solve a practical social problem with the help of technology.</p>
 
-									<p>For the past 24 months, i have been attending a master study in AI with a specialization in Natural Language Processing(NLP). I took courses in machine learning, Computer Vision and Research Methodology. Alongside my study, i was part of a vibrant thematic research group working on a machine translation corpus for the seven under resourced Ethiopian languages. </p>
+									<p>For the past 24 months I have attended a master course in AI with a specialization in
+										Natural Language Processing (NLP). I have taken courses in Machine Learning, Computer
+										Vision and Research Methodology. Next to my studies, I worked in a research team whose
+										goal was to build a machine translation corpus for seven Ethiopian languages, all these
+										under-resourced.</p>
 
-									<p>Before joining my master study in NLP, I have worked in academics as an Assistant Lecturer at Bahir Dar University and, in industry as a Software Engineer and a CEO at my startup, PCODE LTD.</p>
+									<p>Before doing my master’ degree in NLP, I have worked in academia as an Assistant
+									Lecturer (Bahir Dar University) and, in the industry as a Software Engineer and CEO (this
+									for my startup company, PCODE LTD).</p>
 
-									<p>During my thematic research work, i learned first hand that most of the language being spoken in Ethiopia (a country with over 100 million people and 85 languages), had no standard tool to do basic NLP tasks such POS tag, Morphological Analysis and NER. I decided to align my research work on these fundamental problem and choose computational morphology as my research area.</p>
+									<p>While doing research, I’ve found out quickly that none of the languages spoken in Ethiopia (a country of more than 100 million people and 85 languages), had a standard tool to carry out basic NLP tasks such POS tagging, morphological analysis and NER. This being so, I’ve decided to align my research work on such fundamental tasks as: solving low-level NLP tasks via limited training data.</p>
 
-									<p>My masters research focus on learning an optimal representation of morphologically complex languages in a constrained setting: small quantity of training data and minimum human supervision. These would be crucial for higher level language domain intelligence such as speech recognition, speech generation and machine translation. I am interested in projects with a strong social implication.</p>
+									<p>My research focuses on the acquisition of an optimal representation for morphologically
+									complex languages like ours, but in a constrained setting: small quantity of training data and minimal human supervision. These features seem to me crucial to be able to tackle more
+									complex tasks (higher level) such as speech recognition, speech generation and machine
+									translation.</p>
+									<p>Note that I am very interested in projects having a strong social impact </p>
+
 									</div>
 								</div>
 							</div>
