--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="col-md-12">
 									<div class="about-desc">
 										<span class="heading-meta">Intro</span>
-										<p>I was born and raised in Addis Ababa, a city known not only for Lucy, Bikila Abebe, and the fact that it is one of the highest capitals in the world, but also known for being the capital of Africa. I am a software Engineer by training and I have attended various postgraduate programs concerning Computer Science, Linguistics and Business Management. 
+										<p>I was born and raised in Addis Ababa, a city known not only for Lucy, Bikila Abebe, and the fact that it is one of the highest capitals in the world, but also known for being the capital of Africa. I am a software Engineer by training and I have attended various postgraduate programs in Computer Science, Linguistics and Business Management.
 										</p>
 
 									<p>I started my formal career as a software developer at a startup company, some of my
