--- a/index.html
+++ b/index.html
@@ -281,7 +281,8 @@ Involved in design and build of iseleda.com: a job portal solution(PHP), yeketam
 					<div class="row">
 						<div class="col-md-12">
 				         <div class="timeline-centered">
-					     <p>Add links to your projects </p>   
+					     <p>I do some coding to undertand different problems and concepts in Algorithms and Maths </p> 
+					     <p> See some of my repo at <a href='https://github.com/wendeT'>here</a> </p>  
 
 
 					        
